--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,7 +4,9 @@
     </IfModule>
 
     RewriteEngine On
-
+    RewriteCond %{REQUERST_URI} !^public
+    RewriteRule ^(.*)$ public/$1 [L]
+    
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
