--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doku/jokul-php-library": "*",
         "filament/filament": "^4.1",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
