--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,6 @@
 {
-    "version": 2,
-    "functions": {
-        "api/*.php": {
-            "runtime": "vercel-php@0.7.2"
-        }
-    },
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/api/index.php"
-        }
-    ]
+  "version": 2,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
