--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,10 @@
       "src": "/(.*)",
       "dest": "/api/index.php"
     }
-  ]
+  ],
+  "env": {
+    "APP_ENV": "production",
+    "APP_DEBUG": "true",
+    "VIEW_COMPILED_PATH": "/tmp"
+  }
 }
